--- a/Android/CourseApp/app/src/main/res/layout/activity_overview.xml
+++ b/Android/CourseApp/app/src/main/res/layout/activity_overview.xml
@@ -11,42 +11,56 @@
     tools:context="com.example.alex.courseapp.OverviewActivity">
 
     <TextView
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TITLE"
-        android:layout_gravity="center_horizontal" />
-
+        android:text="Username"
+        android:layout_gravity="center_horizontal"
+        android:textSize="32dp"/>
 
     <LinearLayout
+        android:id="@+id/topLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
 
         <TextView
-            android:id="@+id/mat_nr"
+            android:id="@+id/fullname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:text="New Text" />
+            android:text="Text"
+            android:textSize="20dp"/>
 
         <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
+            android:id="@+id/mat_nr"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/matnr"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:text="New Text" />
+            android:gravity="right"
+            android:text="Text"
+            android:textSize="20dp"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/middleLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/topLayout">
 
         <TextView
-            android:id="@+id/surname"
+            android:id="@+id/exercise_group_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/name"
+            android:layout_below="@+id/surname"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:text="New Text" />
+            android:layout_marginTop="30dp"
+            android:text="Group: " />
 
         <TextView
             android:id="@+id/exercise_group"
@@ -54,47 +68,22 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/surname"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:text="New Text" />
 
     </LinearLayout>
 
-
-
-    <Button
-        android:id="@+id/qr_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:onClick="qrcode_click"
-        android:text="Show QR COde" />
-
     <LinearLayout
+        android:id="@+id/bottomLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="300dp"
+        android:layout_below="@+id/middleLayout"
+        android:layout_marginTop="30dp">
 
-     <TextView
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="Choose an exercise group:"/>
-     <Spinner
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:id="@+id/group_spinner">
-
-     </Spinner>
-
-     <Button
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:id="@+id/confirm_Button"
-         android:text="Confirm"
-         android:onClick="confirm_click"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/qr_image"/>
     </LinearLayout>
-
-
 
 </LinearLayout>
