--- a/Android/CourseApp/app/src/main/res/layout/activity_main.xml
+++ b/Android/CourseApp/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,9 @@
         android:onClick="login_click"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="#00587A"
+        android:textColor="#FFFFFF"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -24,6 +26,8 @@
         android:layout_above="@+id/Login_button"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:inputType="textPassword"
+        android:singleLine="true"
         android:id="@+id/password" />
 
     <EditText
@@ -32,6 +36,7 @@
         android:layout_above="@+id/password"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:singleLine="true"
         android:id="@+id/username"/>
 
 
