--- a/Android/CourseApp/app/src/main/res/layout/activity_overview.xml
+++ b/Android/CourseApp/app/src/main/res/layout/activity_overview.xml
@@ -4,26 +4,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#E7E7DE"
     tools:context="com.example.alex.courseapp.OverviewActivity">
 
-    <TextView
-        android:id="@+id/username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Username"
-        android:layout_gravity="center_horizontal"
-        android:textSize="32dp"/>
+
 
     <LinearLayout
-        android:id="@+id/topLayout"
+        android:padding="20dp"
+        android:id="@+id/backgroundLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp">
+        android:background="#00587A"
+        >
+        <LinearLayout
+
+            android:id="@+id/titleLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Username"
+                android:textSize="38dp"
+                android:textColor="#FFFCE6"/>
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:padding="20dp"
+        android:id="@+id/topLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/fullnameLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:gravity="right"
+            android:text="Full name: "
+            android:textSize="20dp"
+            android:textColor="#00587A"/>
 
         <TextView
             android:id="@+id/fullname"
@@ -32,34 +59,61 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:text="Text"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:textColor="#0F3057" />
 
-        <TextView
-            android:id="@+id/mat_nr"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:gravity="right"
-            android:text="Text"
-            android:textSize="20dp"/>
+
 
 
     </LinearLayout>
 
     <LinearLayout
+        android:padding="20dp"
+        android:id="@+id/topLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/mat_nrLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:text="Reg. number: "
+            android:textSize="20dp"
+            android:textColor="#00587A" />
+
+        <TextView
+            android:id="@+id/mat_nr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Text"
+            android:textSize="20dp"
+            android:textColor="#0F3057"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:padding="20dp"
         android:id="@+id/middleLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@+id/topLayout">
+        android:layout_below="@+id/topLayout2"
+        android:background="#CDCBA6"
+        >
 
         <TextView
+
             android:id="@+id/exercise_group_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/surname"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
+            android:textSize="20dp"
             android:text="Group: " />
 
         <TextView
@@ -68,17 +122,20 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/surname"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:text="New Text" />
+            android:textSize="20dp"
+            android:text="New Text"
+            android:textColor="#0F3057"/>
 
     </LinearLayout>
 
+
+
     <LinearLayout
+        android:padding="20dp"
         android:id="@+id/bottomLayout"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_below="@+id/middleLayout"
-        android:layout_marginTop="30dp">
+        android:layout_below="@+id/middleLayout">
 
         <ImageView
             android:layout_width="match_parent"
