Update Android UI, notification not started

--- a/Android/CourseApp/app/src/main/res/layout/activity_overview.xml
+++ b/Android/CourseApp/app/src/main/res/layout/activity_overview.xml
@@ -8,6 +8,14 @@
     tools:context="com.example.alex.courseapp.OverviewActivity">
 
 
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
+     <LinearLayout
+         android:layout_width="fill_parent"
+         android:layout_height="fill_parent"
+         android:orientation="vertical">
 
     <LinearLayout
         android:padding="20dp"
@@ -128,6 +136,38 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:padding="20dp"
+        android:id="@+id/middleLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/topLayout2"
+        android:background="#008891"
+        >
+
+        <TextView
+
+            android:id="@+id/bonus_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/surname"
+            android:layout_centerHorizontal="true"
+            android:textSize="20dp"
+            android:text="Earned bonus: "
+            android:textColor="#CDCBA6"/>
+
+        <TextView
+            android:id="@+id/bonus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/surname"
+            android:layout_centerHorizontal="true"
+            android:textSize="20dp"
+            android:text="New Text"
+            android:textColor="#E7E7DE"/>
+
+    </LinearLayout>
 
 
     <LinearLayout
@@ -135,12 +175,15 @@
         android:id="@+id/bottomLayout"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_below="@+id/middleLayout">
+        android:layout_below="@+id/middleLayout2">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/qr_image"/>
     </LinearLayout>
+
+    </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
