--- a/Android/CourseApp/app/src/main/res/values/colors.xml
+++ b/Android/CourseApp/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#00587a</color>
     <color name="colorPrimaryDark">#00587a</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff9900</color>
 </resources>
